<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ticket Quality Monitor</string>
    <string name="preference_heading">Preferences</string>
    <string name="preference_heading_credentials">Access Data</string>
    <string name="preference_heading_projects">Tracked Project</string>
    <string name="preference_heading_colors">Color Thresholds</string>
    <string name="preference_heading_notifications_refresh">Notifications and Auto Refresh</string>
    
    <string name="preference_title_uri">JIRA Host URI</string>
    <string name="preference_default_uri">http://localhost/</string>
    <string name="preference_summary_uri">The host URI where the JIRA server is accessible</string>
    <string name="preference_title_username">Username</string>
    <string name="preference_default_username">johndoe</string>
    <string name="preference_summary_username">Your username for the JIRA API</string>
    <string name="preference_title_password">Password</string>
    <string name="preference_default_password">Secret</string>
    <string name="preference_summary_password">Your password for the JIRA API</string>
    <string name="preference_error_projects">Retrieving projects failed. 
        Please check your credentials and the URI. Click here to reload.</string>
    <string name="preference_title_color_threshold_green">Green</string>
    <string name="preference_default_color_threshold_green">2.0</string>
    <string name="preference_summary_color_threshold_green">Maximum hours per update to be marked green.</string>
    <string name="preference_title_color_threshold_yellow">Yellow</string>
    <string name="preference_default_color_threshold_yellow">4.0</string>
    <string name="preference_summary_color_threshold_yellow">Maximum hours per update to be marked yellow.</string>
    <string name="preference_title_enable_notifications">Notifications enabled</string>
    <string name="preference_summary_enable_notifications">Enable or disable notifications about critical issues.</string>
    <string name="preference_title_notifications_interval">Notifications interval in minutes</string>
    <string name="preference_default_notifications_interval">15</string>
    <string name="preference_summary_notifications_interval">Interval between checking for new critical issues.</string>
    <string name="preference_title_issues_refresh_rate">Issues refresh rate in minutes</string>
    <string name="preference_default_issues_refresh_rate">1</string>
    <string name="preference_summary_issues_refresh_rate">How often the issues list will be refreshed if the app is open.</string>
    <string name="loading">Loading ..</string>
    <string name="hours_per_update">hours spent per update</string>
    <string name="assignee">Assignee</string>
    <string name="issues_error">Failed to load issues. Please check your settings.</string>
    
    <string name="notification_title">New critical issues found</string>
    <string name="notification_description">Tap here to view them</string>

    <string-array name="preference_default_project_entries"></string-array>
    <string-array name="preference_default_project_values"></string-array>

    <string name="key_jira_host">jira_host</string>
    <string name="key_jira_username">jira_username</string>
    <string name="key_jira_password">jira_password</string>
    <string name="key_project">project</string>
    <string name="key_color_threshold_green">color_threshold_green</string>
    <string name="key_color_threshold_yellow">color_threshold_yellow</string>
    <string name="key_enable_notifications">enable_notifications</string>
    <string name="key_notifications_interval">notifications_interval</string>
    <string name="key_issues_refresh_rate">issues_refresh_rate</string>

</resources>